[UPDATE] 파일 구조 재배치

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,20 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.Albazip">
-        <activity android:name=".ui.register.manager.SearchPlaceActivity"></activity>
-        <activity android:name=".ui.home.HomeActivity">
-        </activity>
-        <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.login.RegisterActivity" >
+        <activity android:name="com.example.albazip.ui.manager.register.SearchPlaceActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.example.albazip.ui.common.home.HomeActivity">
+        </activity>
+        <activity android:name="com.example.albazip.ui.common.login.LoginActivity" />
+        <activity android:name="com.example.albazip.ui.common.register.RegisterActivity" >
+
         </activity>
         <activity android:name=".MainActivity">
         </activity>
