[FEAT] fragment 의 backstack 관리 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,18 @@
         android:theme="@style/Theme.Albazip">
         <activity android:name="com.example.albazip.ui.manager.register.SearchPlaceActivity"
             android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+        <activity android:name="com.example.albazip.ui.common.home.HomeActivity">
+        </activity>
+        <activity android:name="com.example.albazip.ui.common.login.LoginActivity" />
+        <activity android:name="com.example.albazip.ui.common.register.RegisterActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
 
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name="com.example.albazip.ui.common.home.HomeActivity">
-        </activity>
-        <activity android:name="com.example.albazip.ui.common.login.LoginActivity" />
-        <activity android:name="com.example.albazip.ui.common.register.RegisterActivity" >
-
-        </activity>
-        <activity android:name=".MainActivity">
         </activity>
     </application>
 
