[REFAC] 파일 구조 최종 변경

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,20 @@ dependencies {
 
     // 로딩 다이얼로그
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+    // 카카오 맵 구현을 위한 sdk 파일
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/libDaumMapAndroid.jar')
+
+    // https://github.com/square/retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // https://github.com/square/okhttp
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+
+    // https://github.com/square/retrofit/tree/master/retrofit-converters/gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // https://github.com/square/okhttp/tree/master/okhttp-logging-interceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
 }
