--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.albazip">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,21 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.Albazip">
-        <activity android:name="com.example.albazip.ui.register.manager.SearchPlaceActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden">
-        </activity>
-        <activity android:name="com.example.albazip.ui.home.common.HomeActivity">
-        </activity>
-        <activity android:name="com.example.albazip.ui.login.LoginActivity" />
-        <activity android:name="com.example.albazip.ui.register.common.RegisterActivity" />
-        <activity android:name="com.example.albazip.ui.main.MainActivity">
-            <intent-filter>
 
+        <meta-data android:name="com.kakao.sdk.AppKey" android:value="9b17465bab986538ecc5bcc77361fcd2"/>
+
+        <activity
+            android:name="com.example.albazip.src.register.manager.SearchPlaceActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.example.albazip.src.home.common.HomeActivity" />
+        <activity android:name="com.example.albazip.src.login.LoginActivity" />
+        <activity android:name="com.example.albazip.src.register.common.RegisterActivity" />
+        <activity android:name="com.example.albazip.src.main.MainActivity">
+
         </activity>
     </application>
 
