--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,29 +9,29 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.Albazip">
-
-        <meta-data android:name="com.kakao.sdk.AppKey" android:value="9b17465bab986538ecc5bcc77361fcd2"/>
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="9b17465bab986538ecc5bcc77361fcd2" />
 
         <activity
-            android:name="com.example.albazip.src.register.manager.SearchPlaceActivity"
+            android:name=".src.register.manager.SearchPlaceActivity"
             android:windowSoftInputMode="adjustPan|stateHidden">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name="com.example.albazip.src.home.common.HomeActivity" />
-        <activity android:name="com.example.albazip.src.login.LoginActivity" />
-        <activity android:name="com.example.albazip.src.register.common.RegisterActivity" />
-        <activity android:name="com.example.albazip.src.main.MainActivity">
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
 
-        </activity>
-    </application>
+    <activity android:name=".src.home.common.HomeActivity" />
+    <activity android:name=".src.login.LoginActivity" />
+    <activity android:name=".src.register.common.RegisterActivity" />
+    <activity android:name=".src.main.MainActivity" />
+</application>
 
-</manifest>
+    </manifest>
