--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,17 +21,22 @@
         <activity
             android:name=".src.register.manager.SearchPlaceActivity"
             android:windowSoftInputMode="adjustPan|stateHidden">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        </activity>
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+        <activity android:name=".src.register.manager.RegisterPlaceActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-    <activity android:name=".src.home.common.HomeActivity" />
-    <activity android:name=".src.login.LoginActivity" />
-    <activity android:name=".src.register.common.RegisterActivity" />
-    <activity android:name=".src.main.MainActivity" />
-</application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".src.home.common.HomeActivity" />
+        <activity android:name=".src.login.LoginActivity" />
+        <activity android:name=".src.register.common.RegisterActivity">
 
-    </manifest>
+        </activity>
+        <activity android:name=".src.main.MainActivity" />
+        <activity android:name=".src.register.manager.InputBNumActivity"/>
+    </application>
+
+</manifest>
