--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,29 +14,30 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.Albazip">
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="9b17465bab986538ecc5bcc77361fcd2" />
-
-        <activity
-            android:name=".src.register.manager.SearchPlaceActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden">
-        </activity>
-
-        <activity android:name=".src.register.manager.RegisterPlaceActivity" >
+        <activity android:name=".src.register.manager.ManagerOnBoardingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".src.register.manager.InputPlaceMoreActivity" />
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="9b17465bab986538ecc5bcc77361fcd2" />
+
+        <activity
+            android:name=".src.register.manager.SearchPlaceActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
+        <activity android:name=".src.register.manager.RegisterPlaceActivity" />
         <activity android:name=".src.home.common.HomeActivity" />
         <activity android:name=".src.login.LoginActivity" />
-        <activity android:name=".src.register.common.RegisterActivity">
+        <activity android:name=".src.register.common.RegisterActivity" />
+        <activity android:name=".src.main.MainActivity" />
+        <activity android:name=".src.register.manager.InputBNumActivity">
 
         </activity>
-        <activity android:name=".src.main.MainActivity" />
-        <activity android:name=".src.register.manager.InputBNumActivity"/>
     </application>
 
 </manifest>
