[FEAT] 근무자 온보딩 화면 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Albazip">
         <activity android:name=".src.register.manager.ManagerOnBoardingActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".src.register.manager.InputPlaceMoreActivity" />
 
@@ -37,6 +33,13 @@
         <activity android:name=".src.main.MainActivity" />
         <activity android:name=".src.register.manager.InputBNumActivity">
 
+        </activity>
+        <activity android:name=".src.register.worker.WorkerOnBoardingActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
