[STYLE] 로그인~가입 ui 최종점검 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,13 @@
         <activity android:name=".src.register.manager.ManagerOnBoardingActivity">
 
         </activity>
-        <activity android:name=".src.register.manager.InputPlaceMoreActivity" />
+        <activity android:name=".src.register.manager.InputPlaceMoreActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -27,11 +33,6 @@
         <activity
             android:name=".src.register.manager.SearchPlaceActivity"
             android:windowSoftInputMode="adjustPan|stateHidden" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".src.register.manager.RegisterPlaceActivity" />
         <activity android:name=".src.home.common.HomeActivity" >
