--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,11 +42,15 @@
         </activity>
         <activity android:name=".src.register.common.RegisterActivity" >
         </activity>
+        <activity android:name=".src.splash.SplashActivity">
+        </activity>
         <activity android:name=".src.main.MainActivity" >
+
         </activity>
         <activity android:name=".src.register.manager.InputBNumActivity">
 
         </activity>
+        <activity android:name=".src.register.worker.RegisterJoinActivity"/>
         <activity android:name=".src.register.worker.WorkerOnBoardingActivity">
         </activity>
         <activity android:name=".src.home.common.SettingActivity"/>
