--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,25 +6,18 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".config.ApplicationClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".config.ApplicationClass"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.Albazip">
-        <activity android:name=".src.register.manager.ManagerOnBoardingActivity">
-
-        </activity>
-        <activity android:name=".src.register.manager.InputPlaceMoreActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".src.main.WorkerMainActivity"></activity>
+        <activity android:name=".src.register.manager.ManagerOnBoardingActivity"></activity>
+        <activity android:name=".src.register.manager.InputPlaceMoreActivity"></activity>
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -32,30 +25,23 @@
 
         <activity
             android:name=".src.register.manager.SearchPlaceActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustPan|stateHidden"></activity>
         <activity android:name=".src.register.manager.RegisterPlaceActivity" />
-        <activity android:name=".src.home.common.HomeActivity" >
+        <activity android:name=".src.home.common.HomeActivity"></activity>
+        <activity android:name=".src.login.LoginActivity"></activity>
+        <activity android:name=".src.register.common.RegisterActivity"></activity>
+        <activity android:name=".src.splash.SplashActivity"></activity>
+        <activity android:name=".src.main.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".src.login.LoginActivity" >
-        </activity>
-        <activity android:name=".src.register.common.RegisterActivity" >
-        </activity>
-        <activity android:name=".src.splash.SplashActivity">
-
-        </activity>
-        <activity android:name=".src.main.MainActivity" >
-
-        </activity>
-        <activity android:name=".src.register.manager.InputBNumActivity">
-
-        </activity>
-        <activity android:name=".src.register.worker.RegisterJoinActivity">
-        </activity>
-        <activity android:name=".src.register.worker.WorkerOnBoardingActivity">
-        </activity>
-        <activity android:name=".src.home.common.SettingActivity"/>
+        <activity android:name=".src.register.manager.InputBNumActivity"></activity>
+        <activity android:name=".src.register.worker.RegisterJoinActivity"></activity>
+        <activity android:name=".src.register.worker.WorkerOnBoardingActivity"></activity>
+        <activity android:name=".src.home.common.SettingActivity" />
     </application>
 
 </manifest>
