[FEAT] btm nav 기능과 스택관리 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.Albazip">
-        <activity android:name=".src.main.ManagerMainActivity"></activity>
+        <activity android:name=".src.main.ManagerMainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".src.main.WorkerMainActivity" />
         <activity android:name=".src.register.manager.ManagerOnBoardingActivity" />
         <activity android:name=".src.register.manager.InputPlaceMoreActivity" />
@@ -33,11 +39,6 @@
         <activity android:name=".src.register.common.RegisterActivity" />
         <activity android:name=".src.splash.SplashActivity" />
         <activity android:name=".src.main.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".src.register.manager.InputBNumActivity" />
         <activity android:name=".src.register.worker.RegisterJoinActivity" />
