[FEAT] 마이페이지>관리자>작성글 탭 UI 구성 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Albazip">
         <activity android:name=".src.main.ManagerMainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".src.main.WorkerMainActivity" />
         <activity android:name=".src.register.manager.ManagerOnBoardingActivity" />
@@ -28,17 +33,13 @@
         <activity
             android:name=".src.register.manager.SearchPlaceActivity"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-        <activity android:name=".src.register.manager.RegisterPlaceActivity" />
+        <activity android:name=".src.register.manager.RegisterPlaceActivity" >
+        </activity>
         <activity android:name=".src.home.common.HomeActivity" />
         <activity android:name=".src.login.LoginActivity" />
         <activity android:name=".src.register.common.RegisterActivity" />
         <activity android:name=".src.splash.SplashActivity" />
         <activity android:name=".src.main.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".src.register.manager.InputBNumActivity" />
         <activity android:name=".src.register.worker.RegisterJoinActivity" />
