[FEAT] 마이페이지>근무자 탭 UI 배치 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,14 @@
         <activity android:name=".src.register.worker.RegisterJoinActivity" />
         <activity android:name=".src.register.worker.WorkerOnBoardingActivity" />
         <activity android:name=".src.home.common.SettingActivity" />
+
+
+        <activity android:name=".src.mypage.worker.myInfo.LateCheckActivity">
+
+        </activity>
+        <activity android:name=".src.mypage.worker.myInfo.TogetherWorkActivity"/>
+        <activity android:name=".src.mypage.worker.myInfo.DoneWorkActivity"/>
+
     </application>
 
 </manifest>
