--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".config.ApplicationClass"
@@ -16,10 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Albazip">
         <activity android:name=".src.main.ManagerMainActivity">
-
         </activity>
         <activity android:name=".src.main.WorkerMainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".src.register.manager.ManagerOnBoardingActivity" />
         <activity android:name=".src.register.manager.InputPlaceMoreActivity" />
@@ -38,11 +42,7 @@
         <activity android:name=".src.register.common.RegisterActivity" />
         <activity android:name=".src.splash.SplashActivity" />
         <activity android:name=".src.main.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".src.register.manager.InputBNumActivity" />
         <activity android:name=".src.register.worker.RegisterJoinActivity" />
@@ -57,8 +57,8 @@
         <activity android:name=".src.mypage.worker.myInfo.DoneWorkActivity"/>
         <activity android:name=".src.mypage.worker.myInfo.SelectMonthListActivity"/>
         <activity android:name=".src.mypage.manager.AddWorkerOneActivity">
-
         </activity>
+        <activity android:name=".src.mypage.worker.myInfo.SelectDayListActivity"/>
 
 
     </application>
