--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Albazip">
         <activity android:name=".src.main.ManagerMainActivity">
+
+        </activity>
+        <activity android:name=".src.main.WorkerMainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".src.main.WorkerMainActivity" >
-
         </activity>
         <activity android:name=".src.register.manager.ManagerOnBoardingActivity" />
         <activity android:name=".src.register.manager.InputPlaceMoreActivity" />
@@ -57,7 +57,8 @@
         <activity android:name=".src.mypage.worker.myInfo.TogetherWorkActivity"/>
         <activity android:name=".src.mypage.worker.myInfo.DoneWorkActivity"/>
         <activity android:name=".src.mypage.worker.myInfo.SelectMonthListActivity"/>
-        <activity android:name=".src.mypage.manager.AddWorkerOneActivity">
+        <activity android:name=".src.mypage.manager.AddWorkerOneActivity"
+            android:windowSoftInputMode="adjustResize">
         </activity>
         <activity android:name=".src.mypage.worker.myInfo.SelectDayListActivity"/>
 
