--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,13 +37,14 @@
         <activity android:name=".src.home.common.HomeActivity" />
         <activity android:name=".src.login.LoginActivity" />
         <activity android:name=".src.register.common.RegisterActivity" />
-        <activity android:name=".src.splash.SplashActivity" />
-        <activity android:name=".src.main.MainActivity">
+        <activity android:name=".src.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".src.main.MainActivity">
         </activity>
         <activity android:name=".src.register.manager.InputBNumActivity" />
         <activity android:name=".src.register.worker.RegisterJoinActivity" />
