[FIX] 근무자 할 일 recyclerview 오류 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,11 +41,7 @@
         <activity android:name=".src.login.LoginActivity" />
         <activity android:name=".src.register.common.RegisterActivity" />
         <activity android:name=".src.splash.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".src.main.MainActivity">
         </activity>
@@ -63,9 +59,18 @@
         <activity android:name=".src.mypage.worker.myInfo.SelectMonthListActivity"/>
         <activity android:name=".src.mypage.manager.AddWorkerOneActivity"
             android:windowSoftInputMode="adjustResize">
+
         </activity>
         <activity android:name=".src.mypage.worker.myInfo.SelectDayListActivity"/>
+        <activity android:name=".src.mypage.manager.AddWorkerTwoActivity"
+            android:windowSoftInputMode="adjustPan"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <!-- setting -->
         <activity android:name=".src.mypage.common.AlarmSettingActivity">
