[FEAT] 근무자 카드 activity UI 구현 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,8 @@
         <activity android:name=".src.mypage.common.ServiceLawActivity"/>
         <activity android:name=".src.mypage.common.SubScribeActivity"/>
         <activity android:name=".src.mypage.common.WithDrawMemberActivity"/>
+        <activity android:name=".src.mypage.manager.workerlist.cardevent.ui.CardInfoActivity">
+        </activity>
 
     </application>
 
