--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,8 @@
         <activity android:name=".src.mypage.common.setting.WithDrawMemberActivity"/>
         <activity android:name=".src.mypage.common.setting.WMyPageSettingActivity"/>
 
+        <activity android:name=".src.home.manager.opened.QRShowingActivity"/>
+
 
     </application>
 
