[STYLE] 관리자>홈>메인 알림 준비중 UI 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,6 +101,7 @@
         <activity android:name=".src.mypage.common.setting.WMyPageSettingActivity"/>
 
         <activity android:name=".src.home.manager.opened.QRShowingActivity"/>
+        <activity android:name=".src.home.common.HomeAlarmActivity"/>
 
 
     </application>
