[FIX] QR 스캔 오류 및 화면 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,7 +110,8 @@
 
         </activity>
 
-        <activity android:name=".src.home.worker.opened.QRScanningActivity"/>
+        <activity android:name=".src.home.worker.opened.QRScanningActivity"
+            android:theme="@style/Theme.Transparent"/>
 
         <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
