[FEAT] 근무자 홈 UI 연결 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,10 @@
             android:screenOrientation="portrait"
             tools:replace="screenOrientation"/>
 
+        <activity android:name=".src.home.common.HomeShopListActivity"/>
+
+        <activity android:name=".src.home.worker.opened.worklist.ui.HomeWTodayToDoListActivity"/>
+
 
     </application>
 
