[STYLE]커뮤니티 관리자 메인화면 완성

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,8 @@ dependencies {
     // qr 코드 스캔
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 
+    // 플로팅 버튼
+    implementation 'com.github.clans:fab:1.6.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
